# FF501_OpenCV_project

./: .gitignore  2nd_week.cpp  FAST.cpp  OpenCV.sln  README.md
Projects/OpenCV/: OpenCVX.sln
Projects/OpenCV/OpenCV/: 1st_week.cpp  2nd_week.cpp  MarkWeek1.cpp  MatchTemp.cpp  OpenCV.vcxproj  OpenCV.vcxproj.filters  contourVid.cpp
Projects/OpenCV/OpenCVX/: 1st_week.cpp  2nd_week.cpp  Mat type.txt  Morteza.cpp  MortezaTryLetter.cpp  OCR.cpp  OpenCVX.vcxproj  OpenCVX.vcxproj.filters  SVM.cpp  SVMSend.cpp  descriptors.txt  mySVM.xml  train.txt  trainedLettersSVM.xml
Projects/OpenCV/OpenCVX/Mik/: ANPR.cpp  ANPR.h  Mort.cpp  Mort.h  MySVM.cpp  MySVM.h  OpenCVTestProject.cpp  SurfCam.cpp
Tasks/: Tasks.sln  task2.cpp
code/: contours.cpp  task2.cpp
code/OpenCVTestProject/: ANPR.cpp  ANPR.h  Disco.cpp  ImageLocations.h  MySVM.cpp  OpenCVTestProject.cpp  OpenCVTestProject.sln  OpenCVTestProject.vcxproj  OpenCVTestProject.vcxproj.filters  ReadMe.txt
code/Tasks/: CMakeLists.txt  contours.cpp  main.cpp
python/: ORB.py  SVMTest.py  cam.py  camtest.py  knn.py  presentationProg.py  svm.py  task2.py  task3.py
python/test/: ProLearning.py  SVM.py  statmodel.py
task3/: code.sln  code.vcxproj  code.vcxproj.filters  contours.cpp  main.cpp  task2.cpp
